--- a/index.html
+++ b/index.html
@@ -15,24 +15,62 @@
           <a href="https://yago26.github.io/PIBIC-EM/">Projeto PIBIC-EM</a>
         </li>
         <li>
-          <a href="https://yago26.github.io/Ctrl-Esc-Game-Over/">Jogo 2D</a>
+          Jogos 2D
+          <ol>
+            <li>
+              <a
+                href="https://yago26.github.io/Ctrl-Esc-Game-Over/fase-01_luana/index.html"
+                >Batalha Literária</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://yago26.github.io/Ctrl-Esc-Game-Over/fase-02_yago/index.html"
+                >Jogo pessoal</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://yago26.github.io/Ctrl-Esc-Game-Over/fase-03_apollo/index.html"
+                >Revolta Química</a
+              >
+            </li>
+          </ol>
         </li>
-        <li><a href="src/06-SistemaSolar/">Sistema Solar</a></li>
-        <li><a href="src/01-Formas/index.html">Formas</a></li>
+        <li><a href="src/Sistema-Solar/">Sistema Solar</a></li>
+        <li><a href="src/Formas/index.html">Formas</a></li>
         <li>
-          <a href="src/02-MovimentoRetilineo/index.html"
+          <a href="src/Movimento/Retilineo/index.html"
             >Movimento Retilíneo (Unidimensional)</a
           >
         </li>
         <li>
-          <a href="src/MovimentoPlano/index.html"
+          <a href="src/Movimento/Plano/index.html"
             >Movimento Plano (Bidimensional)</a
           >
         </li>
-        <li><a href="src/03-Gravidade/index.html">Gravidade</a></li>
-        <li><a href="src/04-Colisao/index.html">Colisão</a></li>
-        <li><a href="src/05-Explosao/index.html">Explosão</a></li>
-        <li><a href="src/00-Projeto-Final/index.html">Projeto Final</a></li>
+        <li><a href="src/Gravidade/index.html">Gravidade</a></li>
+        <li>
+          Colisão
+          <ol>
+            <li>
+              <a href="src/Colisao/Mesma-Forma-e-Tamanho/index.html"
+                >Mesmas Formas e Tamanhos</a
+              >
+            </li>
+            <li>
+              <a href="src/Colisao/Mesma-Forma-Tamanho-Diferente/index.html"
+                >Mesmas Formas, mas com Tamanhos Diferentes</a
+              >
+            </li>
+            <li>
+              <a href="src/Colisao/Forma-Diferente/index.html"
+                >Formas Diferentes</a
+              >
+            </li>
+          </ol>
+        </li>
+        <li><a href="src/Explosao/index.html">Explosão</a></li>
       </ol>
     </div>
   </body>
